# suber-sudoku

./: .coveragerc  .gitignore  .pylintrc  README.md  mypy.ini  pyproject.toml  tasks.py
.github/workflows/: main.yml
app/: main.py
src/: main.py
suber/: main.py
suber/UI/: app.py
suber/static/: styles.tcss
suber/ui/: app.py
suber/utils/: constants.py
tests/unit/: main_test.py
